feat: add space ship

--- a/index.html
+++ b/index.html
@@ -198,6 +198,7 @@
     <script src="/js/models/mars.js"></script>
     <script src="/js/models/saturn.js"></script>
     <script src="/js/models/uranus.js"></script>
+    <script src="/js/models/spaceship.js"></script>
     <script src="/js/animation.js"></script>
     <script src="/js/navigation.js"></script>
     <script src="/js/main.js"></script>
