style: navbar on mobile - responsive

--- a/index.html
+++ b/index.html
@@ -133,7 +133,16 @@
                 <a class="logo" data-page="home-page" aria-label="Về trang chủ">
                     <img src="/images/avatar.jpg" alt="Logo - Avatar của Trần Võ Hoàng Huy" class="logo-img">
                 </a>
-                <ul role="menubar">
+                
+                <!-- Hamburger Menu Button cho Mobile -->
+                <button class="mobile-menu-toggle" aria-label="Toggle menu" aria-expanded="false">
+                    <span class="hamburger-line"></span>
+                    <span class="hamburger-line"></span>
+                    <span class="hamburger-line"></span>
+                </button>
+                
+                <!-- Navigation Menu -->
+                <ul role="menubar" class="nav-menu">
                     <li role="none"><a data-page="home-page" class="nav-link active" role="menuitem" aria-current="page">Trang chủ</a></li>
                     <li role="none"><a data-page="about-page" class="nav-link" role="menuitem">Giới thiệu</a></li>
                     <li role="none"><a data-page="projects-page" class="nav-link" role="menuitem">Dự án</a></li>
